--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
      
     <div class="mainVidSec">
     <img class="mainImg" src="Images/sixshot-logo.png" alt="logo">
-    <video src="https://www.dropbox.com/scl/fi/o763nes89b61byqybcz0o/sixshot-video.mp4" muted loop id="myVideo" autoplay></video>
+    <video src="https://www.dropbox.com/scl/fi/o763nes89b61byqybcz0o/sixshot-video.mp4"frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen allow="autoplay"></video>
     </div>
 
      <!--VIDEO SECTION END--> 
