--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
      
     <div class="mainVidSec">
     <img class="mainImg" src="Images/sixshot-logo.png" alt="logo">
-    <video src="https://www.dropbox.com/scl/fi/o763nes89b61byqybcz0o/sixshot-video.mp4?rlkey=5bzlzr3hpvev4j9g7bg8e0vd4&dl=0" muted loop id="myVideo" allowfullscreen allow="autoplay"></video>
+    <video src="https://www.dropbox.com/scl/fi/o763nes89b61byqybcz0o/sixshot-video.mp4?rlkey=5bzlzr3hpvev4j9g7bg8e0vd4&raw=1" muted loop id="myVideo" allowfullscreen autoplay></video>
     </div>
 
      <!--VIDEO SECTION END--> 
