Slider Added and Webite Organised and Structured

--- a/index.html
+++ b/index.html
@@ -234,12 +234,12 @@
           </div>
           <div class="slide" key="1">
             <img src="Images/slide2.jpg" alt="2" />
-            <h4>Wedding Shoots</h4>
+            <h4>Candid Shoots</h4>
             <p>Some Placeholder content ...</p>
           </div>
           <div class="slide" key="2">
             <img src="Images/slide3.jpg" alt="3" />
-            <h4>Wedding Shoots</h4>
+            <h4>Closeup Shoots</h4>
             <p>Some Placeholder content ...</p>
           </div>
 
